# lulucf-somers

./: .buildinfo  .gitattributes  .gitignore  MANIFEST.in  README.md  about.html  api_reference.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  user_guide.html
.doctrees/: about.doctree  api_reference.doctree  environment.pickle  index.doctree  user_guide.doctree
.doctrees/api_reference/: ef_factors.doctree  geometry.doctree  lasso_grid.doctree  lusos.doctree
.doctrees/user_guide/: concept.doctree  coverage.doctree  flux.doctree  spatial_emissions.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: index.html
_modules/lusos/: area_statistics.html  coverage.html  emissions.html  lasso.html
_modules/lusos/data/: emission_factors.html
_modules/lusos/geometry/: ops.html
_sources/: about.md.txt  api_reference.md.txt  index.md.txt
_sources/user_guide/: concept.ipynb.txt  coverage.ipynb.txt  flux.ipynb.txt  spatial_emissions.ipynb.txt
api_reference/: ef_factors.html  geometry.html  lasso_grid.html  lusos.html
data/: bro_soilmap.gpkg  emission_factors_2023.csv  emission_factors_2023_high_nl.csv  emission_factors_2023_low_nl.csv  emission_factors_2024_high_nl.csv  emission_factors_2024_low_nl.csv  emission_factors_high_nl.csv  emissions.geoparquet
docs/: about.md  api_reference.md  conf.py  index.md  user_guide.md
docs/api_reference/: ef_factors.rst  geometry.rst  lasso_grid.rst  lusos.rst
docs/user_guide/: concept.ipynb  coverage.ipynb  flux.ipynb  spatial_emissions.ipynb
lulucf/: __init__.py  area_statistics.py  bgt.py  constants.py  coverage.py  emissions.py  lasso.py  rasterize.py  utils.py
lulucf/geometry/: ops.py  predicates.py
lulucf/preprocessing/: __init__.py  bgt.py  soilmap.py  somers.py
lulucf/readers/: __init__.py  geopackage.py  read_soilmap.py
lulucf/validation/: __init__.py  exceptions.py  validate.py  validators.py
lusos/: __init__.py  area_statistics.py  constants.py  coverage.py
lusos/data/: __init__.py  emission_factors.py  example_data.py  registry.txt
lusos/geometry/: ops.py
lusos/io/: read_soilmap.py
lusos/preprocessing/: soilmap.py
lusos/readers/: geopackage.py  read_soilmap.py
src/lusos/: __init__.py  constants.py  coverage.py  lasso.py
src/lusos/data/: example_data.py  registry.txt
src/lusos/preprocessing/: soilmap.py
tests/: conftest.py  test_area_statistics.py  test_coverage.py  test_emissions.py  test_geopackage.py  test_lasso_grid.py  test_lusos_data.py  test_ops.py  test_predicates.py  test_preprocessing.py  test_read_soilmap.py  test_soilmap.py  test_utils.py  test_validation.py
user_guide/: concept.html  coverage.html  flux.html  spatial_emissions.html
