[project]
name = "lulucf"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "smknaake", email = "bas.knaake@deltares.nl"}]
requires-python = ">= 3.11"
dependencies = [
	"dask",
	"fiona",
	"geopandas",
	"mapbox-earcut",
	"numba",
	"numba_celltree",
	"numpy",
	"pandas",
	"pyarrow",
	"rioxarray",
	"xarray",
	"xugrid",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lulucf", "lulucf.*"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
lulucf = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
pip = "*"
numpy = "*"
pandas = "*"
geopandas = "*"
xarray = "*"
rioxarray = "*"
fiona = "*"
matplotlib = "*"
lxml = "*"
pyarrow = "*"
pytest = "*"
dask = "*"
tqdm = "*"
xugrid = "*"
mapbox_earcut = "*"
numba = "*"
numba_celltree = "*"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
	"unittest: test of single component",
	"integrationtest: test of multiple components",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I001"]
ignore = ["F401", "E501", "F811"]
unfixable = ["F401"]
pydocstyle.convention = "numpy"
